# tapdata

./: .agentSingletonLock  .dockerignore  .env  .gitattributes  .gitignore  .tmStartMsg.json  DYNAMIC_TASK_TIMEOUT_IMPLEMENTATION.md  Dockerfile  ENGINE_BYPASS_RATE_LIMIT_FIX.md  ENGINE_RATE_LIMIT_FIX_SUMMARY.md  ENGINE_TASK_QUEUE_BOTTLENECK_FIX.md  ENGINE_TASK_TAKEOVER_COMPENSATION_IMPLEMENTATION.md  LICENSE-Community.txt  OAuth2_JSON_Support.md  RATE_LIMIT_FREQUENCY_AND_THRESHOLD_UPDATE.md  RATE_LIMIT_INTERVAL_UPDATE_SUMMARY.md  README.md  README.zh-CN.md  README.zh_CN.md  README2.md  RELEASE  TASK_SCHEDULING_OPTIMIZATION_SUMMARY.md  TASK_SCHEDULING_TIMEOUT_ANALYSIS.md  TASK_START_COMPENSATION_IMPLEMENTATION.md  TASK_START_QUEUE_IMPLEMENTATION.md  auto_wrapper.sh  build_and_run.sh  building.md  contributing.md  docker-compose.local.yml  docker-compose.official-split.yml  docker-compose.remote.yml  docker-compose.yml  environment.properties  executor.json  fix_legacy_tests.py  fix_legacy_tests_v4.py  fix_remaining.py  fix_test_files.py  fix_test_files_final.py  (+16 more)
data/: data.json  (+8 more)
tapshell/: .gitignore  README.md  cli.ipynb  cli.sh  conf.json  config.ini  index.html.template  pyproject.toml  register-all-connectors.sh  requirements.txt  test.sh
tapshell/docs/: Param-Check.md  Param-Check_zh-hans.md  Python-Sdk.md  Python-Sdk_zh-hans.md
tapshell/lib/: cli.py  config_parse.py  log.py  rules.py
tapshell/tapdata_cli/: check.py  cli.py  config_parse.py  graph.py  history.sqlite  ipython_config.py  log.py  request.py  rules.py
tapshell/template/: executor.json  index.html
(+27693 files in other folders)
